# pygments-renderer

./: .gitignore  README.md  highlight_code.py  pyproject.toml
.github/: dependabot.yml
examples/: task1.cpp  task2.cpp  task3.cpp
scripts/: generate.py
src/: __init__.py  colors.py  fonts.py  highlighter.py  renderer.py
src/scripts/: generate.py
