[project]
name = "pygments-renderer"
version = "1.1.0"
description = "Generate syntax-highlighted code screenshots"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "LicenseRef-CSSM-Unlimited-2.0" }
authors = [
    { name = "ChernegaSergiy" }
]
keywords = ["pygments", "syntax-highlighting", "screenshot", "code"]

dependencies = [
    "Pillow>=10.0.0",
    "Pygments>=2.17.0",
]

[project.scripts]
pygments-renderer = "src.scripts.generate:main"

[tool.setuptools]

[build-system]
requires = ["setuptools==69.5.1"]
build-backend = "setuptools.build_meta"